--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "use": "@vercel/node"
     }
   ],
+  "build": {
+    "commands": ["npm install", "npx prisma generate"]
+  },
   "routes": [
     {
       "src": "/(.*)",
